--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.7.2",
     "next": "12.0.7",
     "node-sass": "6.0",
     "react": "17.0.2",
