--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap-icons": "^1.7.2",
     "next": "12.0.7",
-    "node-sass": "6.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
   }
