--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "recharts": "^2.1.8",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
