--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "recharts": "^2.1.8",
     "styled-components": "^5.3.3"
