--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "recharts": "^2.1.8",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "vercel": "^24.0.1"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.2",
