--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
-    "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "recharts": "^2.1.8",
@@ -20,9 +19,13 @@
     "vercel": "^24.0.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
     "babel-plugin-styled-components": "^2.0.2",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
-    "jest": "^28.0.0"
+    "jest": "^28.0.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-dom": "^18.0.0"
   }
 }
